--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "\n",
@@ -36,7 +44,7 @@
     "     hash_int = int(hash_object.hexdigest(), 16)\n",
     "     return (hash_int % 3) + 1\n",
     "input_string = \"your_first_name_here\"\n",
-    "result = hash_to_range(input_string)\n",
+    "result = hash_to_range('SUNBAL')\n",
     "print(result)\n"
    ]
   },
@@ -67,15 +75,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 1 8\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import List\n",
+    "import timeit\n",
     "\n",
     "def first_duplicate(nums: List[int]) -> int:\n",
-    "    # TODO\n",
-    "    pass"
+    "    seen = []\n",
+    "    for num in nums:\n",
+    "        if num in seen:\n",
+    "            return num\n",
+    "        seen.append(num)\n",
+    "    return -1\n",
+    "\n",
+    "print(first_duplicate([7,8,9,10]) ,\n",
+    "      first_duplicate([3,1,4,2,5,1,6]) ,first_duplicate([6,3,8,9,8,8,4,5]))\n",
+    "\n",
+    " "
    ]
   },
   {
@@ -112,13 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True False\n"
+     ]
+    }
+   ],
    "source": [
     "def is_valid_brackets(s: str) -> bool:\n",
-    "    # TODO\n",
-    "    pass"
+    "    stack = []\n",
+    "    bracket_map = {')': '(', '}': '{', ']': '['}\n",
+    "    for char in s:\n",
+    "        if char in bracket_map.values():\n",
+    "            stack.append(char)\n",
+    "        elif char in bracket_map.keys():\n",
+    "            if not stack or stack[-1] != bracket_map[char]:\n",
+    "                return False\n",
+    "            stack.pop()\n",
+    "    return not stack\n",
+    "\n",
+    "print(is_valid_brackets(\"[)()()]\"), is_valid_brackets(\"()[]{()}\"), is_valid_brackets(\"[{]}\"))"
    ]
   },
   {
@@ -142,15 +186,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 12, 0, 0] [1, 0, 0] [4, 2, 4, 3, 5, 1, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import List\n",
     "\n",
     "def move_zeros_to_end(nums: List[int]) -> List[int]:\n",
-    "    # TODO\n",
-    "    pass"
+    "    stack = []\n",
+    "    for num in nums:\n",
+    "        if num != 0:\n",
+    "            stack.append(num)\n",
+    "    stack.extend([0] * (len(nums) - len(stack)))\n",
+    "    return stack\n",
+    "print(move_zeros_to_end([0,1,0,3,12]), move_zeros_to_end([0,0,1]), move_zeros_to_end([4,2,4,0,0,3,0,5,1,0]))"
    ]
   },
   {
@@ -164,12 +221,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here"
+    "Given an array of integers output the first duplicate number if no duplicate present return -1."
    ]
   },
   {
@@ -181,11 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "nums=[7,8,6,9,10,0,0]\n",
+    "output = 0\n",
+    "\n",
+    "nums=[3,6,8,9,3,8,0,4,5]\n",
+    "output=3"
    ]
   },
   {
@@ -198,11 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# check and print output of first duplicate number function\n",
+    "nums=[3,6,8,9,3,8,0,4,5]\n",
+    "\n",
+    "def first_duplicate(nums: List[int]) -> int:\n",
+    "    seen = set()  # abstract data type for fast lookup\n",
+    "    for num in nums:\n",
+    "        if num in seen:\n",
+    "            return num  # first duplicate found\n",
+    "        seen.add(num)\n",
+    "    return -1  # no duplicates found\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -214,12 +285,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here"
+    "Initialize an empty set called seen.\n",
+    "This will store all unique numbers we’ve encountered while scanning through the list.\n",
+    "\n",
+    "Iterate through each number in the list one by one.\n",
+    "\n",
+    "If the number is already in the set, it means we’ve seen it before — therefore, it is a duplicate.\n",
+    "We immediately return that number because it’s the first one that repeats.\n",
+    "\n",
+    "If the number is not in the set, we add it to seen and move to the next element.\n",
+    "\n",
+    "If no duplicates are found after checking all numbers, we return -1."
    ]
   },
   {
@@ -231,12 +310,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here"
+    "Time Complexity: O(n)\n",
+    "\n",
+    "The algorithm goes through the list once, examining each element only one time.\n",
+    "\n",
+    "For each element, two constant-time operations are performed:\n",
+    "Membership check: if num in seen — average O(1) time using a set.\n",
+    "Insertion: seen.add(num) — also O(1) on average.\n",
+    "Therefore, the total time grows linearly with the size of the input list n.\n",
+    "Overall Time Complexity = O(n)\n",
+    "\n",
+    "Space Complexity: O(n)\n",
+    "\n",
+    "In the worst case, if there are no duplicates, the algorithm will store every element in the set.\n",
+    "Hence, the amount of additional memory used is proportional to the number of elements in the input list.\n",
+    "Overall Space Complexity = O(n)"
    ]
   },
   {
@@ -248,12 +339,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here"
+    "Another way to solve the “First Duplicate in List” problem is by using a dictionary (dict) instead of a set.\n",
+    "\n",
+    "Here’s the thought process:\n",
+    "\n",
+    "Initialize an empty dictionary called counts.\n",
+    "This will be used to keep track of how many times each number appears in the list.\n",
+    "Loop through the list one element at a time.\n",
+    "For each number:\n",
+    "\n",
+    "Check if it already exists as a key in the dictionary.\n",
+    "If it does, that means we’ve seen it before → return that number immediately (it’s the first duplicate).\n",
+    "If it does not, add it to the dictionary with a count of 1.\n",
+    "If the loop completes without finding any duplicates, return -1."
    ]
   },
   {
@@ -301,7 +402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
