adding working files code

--- a/01_materials/slides/3_recursion.ipynb
+++ b/01_materials/slides/3_recursion.ipynb
@@ -134,14 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1b65eaad",
    "metadata": {},
    "outputs": [],
    "source": [
     "def countdown(i):\n",
     "  print(i)\n",
-    "  countdown(i - 1)"
+    "  countdown(i - 1)\n",
+    "\n",
+    "  #countdown(5)"
    ]
   },
   {
@@ -155,17 +157,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "1cf5d588",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "def countdown(i):\n",
     "  print(i)\n",
     "  if i <= 0:\n",
     "    return \n",
     "  else:\n",
-    "    countdown(i - 1)"
+    "    countdown(i - 1)\n",
+    "\n",
+    "\n",
+    "countdown(5)"
    ]
   },
   {
@@ -187,16 +205,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "b2b9ea9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def factorial(n):\n",
-    "  if x == 1:\n",
+    "def factorial(x):\n",
+    "  if x == 1 or x == 0:\n",
     "    return 1\n",
     "  else:\n",
-    "    return x * factorial(x - 1)"
+    "    return x * factorial(x - 1)\n",
+    "\n",
+    "factorial(3)"
    ]
   },
   {
@@ -350,7 +381,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer herede\n",
+    "def recursive_function(some_input):\n",
+    "    recursive_helper(some_inputm, base_values)\n",
+    "\n",
+    "def recursive_helper(some_input, additional_information):\n",
+    "    #does the work\n",
+    "    #has a base case\n",
+    "    #has a recursuve case\n",
+    "    recursive_helper(with_update_input, additional_information)"
    ]
   },
   {
@@ -370,10 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "b31da01e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# INPUT\n",
     "lst = [1,2,5,6]\n",
@@ -385,13 +435,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "bd660dc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "def find_sums(lst, x):\n",
+    "    result=[]\n",
+    "    find_sum_helper(lst,x,[],result)\n",
+    "\n",
+    "def find_sum_helper(lst,x,combinations,result):\n",
+    "    if(len(lst)==0):\n",
+    "        return\n",
+    "    if(x==0):\n",
+    "        result.append(combinations)\n",
+    "    if(x<0):\n",
+    "        return\n",
+    "\n",
+    "    find_sum_helper(lst[1:],x-lst[0],combinations+[lst[0]], result )\n",
+    "    find_sum_helper(lst[1:], x, combinations, result)\n",
+    "\n",
+    "    find_sums(lst, x )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "964be1b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -557,16 +631,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "24066712",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst=[1,2,3,4,5,6]\n",
+    "\n",
+    "my_set = set()\n",
+    "\n",
+    "for item in lst:\n",
+    "    if item not in my_set:\n",
+    "        my_set.add(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5d05bc82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HashTable():\n",
+    "    def __init__ (self, size=100):\n",
+    "        self.size = size\n",
+    "        self.ht=[]\n",
+    "        for i in range(size):\n",
+    "            self.ht.append([])\n",
+    "    \n",
+    "    def my_hash(self, key):\n",
+    "        index= hash(key)%self.size\n",
+    "        return index\n",
+    "    \n",
+    "    def insert(self, key, value):\n",
+    "        index= self.my_hash(key)\n",
+    "        for pair in self.ht[index]:\n",
+    "            if pair[0]==key:\n",
+    "                return\n",
+    "        self.ht[index].append((key,value))\n",
+    "    \n",
+    "    def remove (self, key):\n",
+    "        index= self.my_hash(key)\n",
+    "        for i in range(len(self.ht[index])):\n",
+    "            if(self.ht.index[i][0]==key):\n",
+    "                self.ht[index].remove(i)\n",
+    "        \n",
+    "    def contains(self, key):\n",
+    "        index= self.my_hash(key)\n",
+    "        for i in range(len(self.ht[index])):\n",
+    "            if(self.ht.index[i][0]==key):\n",
+    "               return True\n",
+    "        return False\n",
+    "        \n",
+    "    def get(self, key):\n",
+    "        index= self.my_hash(key)\n",
+    "        for i in range(len(self.ht[index])):\n",
+    "            if(self.ht.index[i][0]==key):\n",
+    "                return self.ht[index][1]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b739b774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_ht=HashTable(size=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "91a5d28f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_ht.insert('dog', 'toby')\n",
+    "my_ht.insert('dog2', '2toby')\n",
+    "my_ht.insert('dog3', '3toby')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "06adda8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [('dog2', '2toby')],\n",
+       " [],\n",
+       " [('dog3', '3toby')],\n",
+       " [('dog', 'toby')],\n",
+       " []]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_ht.ht"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "36d163f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmy_ht\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontains\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdog\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[24], line 28\u001b[0m, in \u001b[0;36mHashTable.contains\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m     26\u001b[0m index\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmy_hash(key)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mht[index])):\n\u001b[1;32m---> 28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mht\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39mkey):\n\u001b[0;32m     29\u001b[0m        \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "my_ht.contains('dog')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c8d4db6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [],\n",
+       " [('dog2', '2toby')],\n",
+       " [],\n",
+       " [('dog3', '3toby')],\n",
+       " [('dog', 'toby')],\n",
+       " []]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_ht.ht"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -580,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
