--- a/01_materials/slides/1_motivation_big_o.ipynb
+++ b/01_materials/slides/1_motivation_big_o.ipynb
@@ -145,8 +145,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List Addition: 0.000406 seconds\n",
-      "Vectorized Addition: 0.000333 seconds"
+      "List Addition: 0.002644 seconds\n",
+      "Vectorized Addition: 0.000074 seconds\n"
      ]
     }
    ],
@@ -207,8 +207,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List Search: 0.000064 seconds\n",
-      "Set Search: 0.000001 seconds"
+      "List Search: 0.000188 seconds\n",
+      "Set Search: 0.000002 seconds\n"
      ]
     }
    ],
@@ -296,8 +296,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selection sort: 1.421455 seconds\n",
-      "Tim sort: 0.001110 seconds"
+      "Selection sort: 7.851763 seconds\n",
+      "Tim sort: 0.001970 seconds\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -594,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
