--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -27,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "\n",
@@ -37,7 +45,7 @@
     "     hash_object = hashlib.sha256(input_string.encode())\n",
     "     hash_int = int(hash_object.hexdigest(), 16)\n",
     "     return (hash_int % 3) + 1\n",
-    "input_string = \"your_first_name_here\"\n",
+    "input_string = \"Sunbal\"\n",
     "result = hash_to_range(input_string)\n",
     "print(result)\n"
    ]
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +105,8 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "def is_duplicate(root: TreeNode) -> int:\n",
-    "  # TODO"
+    "  #TODO\n",
+    "  pass\n"
    ]
   },
   {
@@ -119,6 +128,8 @@
     "\n",
     "  Input: `root = [1, 2, 2, 3, 5, 6, 7]` *What traversal method is this?*\n",
     "\n",
+    "  **This is Breadth first search traversal order **\n",
+    "\n",
     "  Output: [[1, 2, 3], [1, 2, 5], [1, 2, 6], [1, 2, 7]]\n",
     "\n",
     "  ### Example 2\n",
@@ -136,18 +147,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Definition for a binary tree node.\n",
+    "from typing import List\n",
+    "\n",
     "# Definition for a binary tree node.\n",
-    "# class TreeNode(object):\n",
-    "#     def __init__(self, val = 0, left = None, right = None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "\n",
     "def bt_path(root: TreeNode) -> List[List[int]]:\n",
-    "  # TODO"
+    "    def depth_first_search(node, path, result):\n",
+    "        if not node:\n",
+    "            return\n",
+    "        path.append(node.val)\n",
+    "\n",
+    "        if not node.left and not node.right:\n",
+    "            result.append(list(path))\n",
+    "        else:\n",
+    "            depth_first_search(node.left, path, result)\n",
+    "            depth_first_search(node.right, path, result)\n",
+    "\n",
+    "        path.pop()  # backtrack after exploring children\n",
+    "\n",
+    "    result = []\n",
+    "    depth_first_search(root, [], result)\n",
+    "    return result\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10, 9, 8], [10, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = TreeNode(10,TreeNode(9,None,TreeNode(8)),TreeNode(7))\n",
+    "print(bt_path(root))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [1, 2, 5], [1, 2, 6], [1, 2, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = TreeNode(1)\n",
+    "root.left = TreeNode(2, TreeNode(3), TreeNode(5))\n",
+    "root.right = TreeNode(2, TreeNode(6), TreeNode(7))\n",
+    "print(bt_path(root))"
    ]
   },
   {
@@ -188,11 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (2767058236.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[37], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    # TODO\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def missing_num(nums: List) -> int:\n",
     "  # TODO"
@@ -227,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n"
    ]
   },
   {
@@ -396,7 +476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
